[gd_scene load_steps=11 format=3 uid="uid://c2mlonet2u0vp"]

[ext_resource type="PackedScene" uid="uid://dq34wi4msb7e3" path="res://enemy/enemy.tscn" id="1_t2utv"]
[ext_resource type="Script" path="res://enemy/porcupine_boss.gd" id="2_gq5kq"]
[ext_resource type="Texture2D" uid="uid://beo0nbbomd75y" path="res://assets/porcupine.png" id="2_x815e"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="4_mmex2"]
[ext_resource type="PackedScene" uid="uid://b73ukbmk2llnr" path="res://enemy/quills.tscn" id="5_070tj"]

[sub_resource type="Animation" id="Animation_rm3wy"]
resource_name = "spin"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HurtboxComponent/CollisionPolygon2D3:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxComponent/CollisionPolygon2D2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_kyuq4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HurtboxComponent/CollisionPolygon2D3:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxComponent/CollisionPolygon2D2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bglwg"]
resource_name = "angry"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 0.741176)]
}

[sub_resource type="Animation" id="Animation_6vxkq"]
resource_name = "angry_spin"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HurtboxComponent/CollisionPolygon2D3:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxComponent/CollisionPolygon2D2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 0.792157), Color(1, 1, 1, 1), Color(1, 0, 0, 0.792157), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f83uq"]
_data = {
"RESET": SubResource("Animation_kyuq4"),
"angry": SubResource("Animation_bglwg"),
"angry_spin": SubResource("Animation_6vxkq"),
"spin": SubResource("Animation_rm3wy")
}

[node name="PorcupineBoss" instance=ExtResource("1_t2utv")]
script = ExtResource("2_gq5kq")
max_health = 100

[node name="AnimatedSprite2D" parent="." index="0"]
scale = Vector2(0.15625, 0.125)

[node name="VisibleOnScreenNotifier2D" parent="." index="1"]
position = Vector2(2.38419e-07, -1)
scale = Vector2(1.6, 0.9)

[node name="MoveComponent" parent="." index="2"]
velocity = Vector2(0, 100)

[node name="StatsComponent" parent="." index="5"]
health = 100

[node name="ShakeComponent" parent="." index="6"]
shake_amount = 0.1

[node name="Sprite2D" type="Sprite2D" parent="." index="7"]
scale = Vector2(0.125, 0.125)
texture = ExtResource("2_x815e")

[node name="MouthCannon" type="Marker2D" parent="Sprite2D" index="0"]
position = Vector2(-104, 64)

[node name="MouthCannonAngleMarker" type="Marker2D" parent="Sprite2D" index="1"]
position = Vector2(-93.6678, 41.501)

[node name="TailCannon" type="Marker2D" parent="Sprite2D" index="2"]
position = Vector2(120, 80)

[node name="TailCannonAngleMarker" type="Marker2D" parent="Sprite2D" index="3"]
position = Vector2(100.148, 59.4842)

[node name="BackCannon" type="Marker2D" parent="Sprite2D" index="4"]
position = Vector2(20.7191, -68.4888)

[node name="BackCannonAngleMarker" type="Marker2D" parent="Sprite2D" index="5"]
position = Vector2(16.8919, -43.4818)

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="HurtboxComponent" index="0"]
visible = false
scale = Vector2(0.125, 0.125)
polygon = PackedVector2Array(-112, -32, -96, -56, -80, -64, -64, -80, -64, -96, -40, -80, -16, -80, 8, -72, 56, -64, 64, -40, 64, -24, 72, 8, 104, 32, 128, 72, 112, 88, 80, 64, 72, 88, 48, 88, 32, 64, -16, 72, -24, 88, -48, 88, -64, 56, -96, 64, -104, 64, -104, 32, -128, 8)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="HitboxComponent" index="0"]
visible = false
scale = Vector2(0.125, 0.125)
polygon = PackedVector2Array(-112, -32, -96, -56, -80, -64, -64, -80, -64, -96, -40, -80, -16, -80, 8, -72, 56, -64, 64, -40, 64, -24, 72, 8, 104, 32, 128, 72, 112, 88, 80, 64, 72, 88, 48, 88, 32, 64, -16, 72, -24, 88, -48, 88, -64, 56, -96, 64, -104, 64, -104, 32, -128, 8)

[node name="DestroyedComponent" parent="." index="12"]
process_mode = 4

[node name="ScoreComponent" parent="." index="13"]
adjust_amount = 500

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="15"]
libraries = {
"": SubResource("AnimationLibrary_f83uq")
}

[node name="QuillShot" type="Node2D" parent="." index="16"]
visible = false
script = ExtResource("4_mmex2")
scene = ExtResource("5_070tj")

[node name="FireRateTimer" type="Timer" parent="." index="17"]
wait_time = 0.16
autostart = true

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
